--- a/easybank/src/index.html
+++ b/easybank/src/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="/./dist/css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <script defer src="src/js/index.js"></script>
 
     <title>COINBENCH : Search over 1,000 cryptos</title>
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="/./dist/img/logo.svg" alt="Logo" class="header__logo" />
+        <img src="/img/logo.svg" alt="Logo" class="header__logo" />
         <form class="search">
           <input
             type="text"
