Completed implementing the news section functionality

--- a/coinbench/src/index.html
+++ b/coinbench/src/index.html
@@ -20,7 +20,8 @@
     <div class="container">
       <header class="header">
           <div class="logo">
-            <p>COINBENCH</p>
+            <img src="img/bitcoin.svg" alt="">
+            <p><strong>coinbench</strong></p>
           </div>
           <div class="search__form">
               <form class="search">
@@ -46,7 +47,9 @@
       </div>
 
       <div class="results">
+        <h2 class="heading-2">Latest news</h2>
           <ul class="results__list"></ul>
+          
 
           <div class="results__pages"></div>
       </div>
