Implemented the model for displaying coin details

--- a/coinbench/src/index.html
+++ b/coinbench/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/main.css" />
     <script defer src="src/js/index.js"></script>
 
-    <title>COINBENCH : Search over 1,000 cryptos</title>
+    <title>COINBENCH</title>
   </head>
 
   <body>
@@ -25,7 +25,7 @@
           </div>
           <div class="search__form">
               <form class="search">
-                  <input type="text" class="search__field" placeholder="Search crypto or crypto symbol" />
+                  <input type="text" class="search__field" placeholder="search crypto" />
                   <button class="btn search__btn">
                       <svg class="search__icon">
                           <use href="img/icons.svg#icon-magnifying-glass"></use>
