Prototype for glass portfolio

--- a/glass-website/index.html
+++ b/glass-website/index.html
@@ -16,17 +16,18 @@
             <div class="dashboard">
                 <div class="user">
                     <img src="./images/nasser.jpg" alt="">
-                    <h3>Kevin Bromwell</h3>
-                    <p>Pro Member</p>
+                    <h3>Nasser</h3>
+                    <p><strong>Software Engineer</strong></p>
+                    <p>nasserssazi@gmail.com</p>
                 </div>
                 <div class="links">
                     <div class="link">
                         <img src="./images/twitch.png" alt="">
-                        <h2>Streams</h2>
+                        <h2>Projects</h2>
                     </div>
                     <div class="link">
                         <img src="images/steam.png" alt="">
-                        <h2>Games</h2>
+                        <h2>Experience</h2>
                     </div>
                     <div class="link">
                         <img src="./images/upcoming.png" alt="">
@@ -34,17 +35,17 @@
                     </div>
                     <div class="link">
                         <img src="./images/library.png" alt="">
-                        <h2>Library</h2>
+                        <h2>Skills</h2>
                     </div>
                 </div>
                 <div class="pro">
-                    <h2>Join pro for free games.</h2>
-                    <img src="./images/controller.png" alt="">
+                    <h2>Download CV</h2>
+                    <!-- <img src="./images/controller.png" alt=""> -->
                 </div>
             </div>
             <div class="games">
                 <div class="status">
-                    <h1>Active Games</h1>
+                    <h1>Projects</h1>
                     <input type="text">
                 </div>
                 <div class="cards">
